# GameOfLife

./: .clang-format  .clang.format  .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  GameOfLifeUI.cpp  GameOfLifeUI.h  LocalGameOfLife.cpp  LocalGameOfLife.h  Logger.h  README.md  correct i think  generate_patterns.py  gitignore  main.cpp
